GRAXConnect/main/default/objects/GRAX_Account_Reporting_Setting__mdt/GRAX_Account_Reporting_Setting__mdt.object-meta.xml
<CustomObject>
    <label>GRAX Account Reporting Setting</label>
    <pluralLabel>GRAX Account Reporting Settings</pluralLabel>
</CustomObject>