GRAXConnect/main/default/objects/GRAX_Account_Reporting_Setting__mdt/fields/cacheResults__c.field-meta.xml
<CustomField>
    <fullName>cacheResults__c</fullName>
    <defaultValue>true</defaultValue>
    <label>cacheResults</label>
    <type>Checkbox</type>
</CustomField>