GRAXConnect/main/default/objects/GRAX_Account_Reporting_Setting__mdt/fields/Filter_Key__c.field-meta.xml
<CustomField>
    <fullName>Filter_Key__c</fullName>
    <defaultValue>&quot;graxopportunityindex__x.Account_Name_hidden_c__c&quot;</defaultValue>
    <label>Filter Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>