GRAXConnect/main/default/objects/GRAX_Account_Reporting_Setting__mdt/fields/Filter_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>Filter_Key_Id__c</fullName>
    <defaultValue>&quot;00N1h000000HkUw&quot;</defaultValue>
    <label>Filter Key Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>