GRAXConnect/main/default/objects/GRAX_Account_Reporting_Setting__mdt/fields/filterKeyIndex__c.field-meta.xml
<CustomField>
    <fullName>filterKeyIndex__c</fullName>
    <defaultValue>1</defaultValue>
    <label>filterKeyIndex</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>