GRAXConnect/main/default/objects/GRAX_Account_Reporting_Setting__mdt/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <label>Report ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>