GRAXConnect/main/default/objects/GRAX_Account_Reporting_Setting__mdt/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <defaultValue>&quot;small&quot;</defaultValue>
    <label>size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>